Fixed unreadable button in Atom notifications

--- a/styles/buttons.less
+++ b/styles/buttons.less
@@ -60,6 +60,7 @@
 }
 
 .btn-color(@bg) {
+	color: @text-color;
 	background-color: @bg;
 	border: 1px solid @bg;
 
